added email field (nullable) to CPAR table, tweaked water-year-select to default to not showing all years option

--- a/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-new-permit/chemigation-new-permit.component.html
@@ -179,6 +179,14 @@
                                     <input type="text" class="form-control" name="ApplicantMobilePhone"
                                         placeholder="Mobile Number" [(ngModel)]="model.ApplicantMobilePhone" />
                                 </div>
+
+                                <div class="col-6 control-label text-right mb-2">
+                                    <label><strong>Email: </strong></label>
+                                </div>
+                                <div class="col-6 text-left mb-2">
+                                    <input type="text" class="form-control" name="ApplicantEmail"
+                                        placeholder="Email Address" [(ngModel)]="model.ApplicantEmail" />
+                                </div>
                             </div>
                             
                         </div>
