--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-edit/chemigation-permit-edit.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-edit/chemigation-permit-edit.component.html
@@ -5,79 +5,90 @@
         </li>
         <li class="breadcrumb-item">
             <a routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}">
-                {{chemigationPermit?.ChemigationPermitNumber}}
+                Chemigation Permit #{{chemigationPermit?.ChemigationPermitNumber}}
             </a>
         </li>
         <li class="breadcrumb-item active" aria-current="page">Edit</li>
     </ol>
 </nav>
+
 <div class="container"  *ngIf="model">
     <app-alert-display></app-alert-display>
+    <div class="row mt-2">
+        <div class="col-12">
+            <h2 class="d-inline-block">Edit Permit Details</h2>
+        </div>
+    </div>
+    <div class="row mt-2">
+        <div class="col-12">
+            <p>Edit details for the selected Chemigation Permit using the form below</p>
+        </div>
+    </div>
     <form (ngSubmit)="onSubmit(editChemigationPermitForm)" #editChemigationPermitForm="ngForm">
-        <div class="row">
-            <div class="col">  
-                <div class="form-group mt-4">
-                    <div class="col-sm-3 control-label">
-                        <label class="required"><strong>Chemigation Permit Number: </strong></label>
-                    </div>
-                    <div class="col-sm-5">
-                        <input type="text" class="form-control" name="ChemigationPermitNumber" readonly
-                            required [value]="model.ChemigationPermitNumber" [(ngModel)]="model.ChemigationPermitNumber" />
-                    </div>
-                </div>
-                <div class="form-group mt-4">
-                    <div class="col-sm-3 control-label text-left">
-                        <label class="required"><strong>Township-Range-Section: </strong></label>
-                    </div>
-                    <div class="col-sm-5">
-                        <input type="text" class="form-control" name="TownshipRangeSection" readonly
-                            placeholder="Township-Range-Section" required [(ngModel)]="model.TownshipRangeSection" />
-                    </div>
-                </div>
-                <div class="form-group mt-4">
-                    <div class="col-sm-3 control-label text-left">
-                        <p class="mb-0"> <label class="required"><strong>Permit Status: </strong></label></p>
-                    </div>
-                    <div class="col-sm-5">
-                        <select name="PermitStatusID" class="form-control" [(ngModel)]="model.ChemigationPermitStatusID"
-                            required>
-                            <option *ngFor="let permitStatus of permitStatuses"
-                                [value]="permitStatus.ChemigationPermitStatusID">
-                                {{permitStatus.ChemigationPermitStatusDisplayName}}
-                            </option>
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group mt-4">
-                    <div class="col-sm-3 control-label text-left">
-                        <p class="mb-0"> <label class="required"><strong>Date Received: </strong></label></p>
-                    </div>
-                    <div class="col-sm-5">
-                        <div class="input-group">
-                            <input class="form-control" name="dp"
-                            [(ngModel)]="model.DateReceived" ngbDatepicker #d="ngbDatepicker" required>
-                            <div class="input-group-append">
-                                <button class="btn btn-zybach far fa-calendar" (click)="d.toggle()" type="button"></button>
+        <div class="row align-items-center">
+            <div class="col-12">
+                <div class="card" *ngIf="model">
+                    <div class="card-body">
+                        <div class="row col-12">
+                            <div class="row col-6 mt-4">
+
+                                <div class="col-6 control-label text-right mb-2">
+                                    <label><strong>Chemigation Permit Number: </strong></label>
+                                </div>
+                                <div class="col-6 text-left mb-2">
+                                    <input type="text" class="form-control" name="ChemigationPermitNumber" readonly
+                                        [(ngModel)]="model.ChemigationPermitNumber" />
+                                </div>
+
+                                <div class="col-6 control-label text-right mb-2">
+                                    <label class="required"><strong>Permit Status: </strong></label>
+                                </div>
+                                <div class="col-6 text-left mb-2">
+                                    <select name="PermitStatusID" class="form-control" 
+                                        [(ngModel)]="model.ChemigationPermitStatusID" required>
+                                        <option *ngFor="let permitStatus of permitStatuses"
+                                            [value]="permitStatus.ChemigationPermitStatusID">
+                                            {{permitStatus.ChemigationPermitStatusDisplayName}}
+                                        </option>
+                                    </select>
+                                </div>
+
                             </div>
+    
+                            <div class="row col-6 mt-4">
+
+                                <div class="col-6 control-label text-right mb-2">
+                                    <label><strong>Township-Range-Section: </strong></label>
+                                </div>
+                                <div class="col-6 text-left mb-2">
+                                    <input type="text" class="form-control" name="TownshipRangeSection" readonly
+                                        [(ngModel)]="model.TownshipRangeSection" />
+                                </div>
+
+                                <div class="col-6 control-label text-right mb-2">
+                                    <label><strong>County: </strong></label>
+                                </div>
+                                <div class="col-6 text-left mb-2">
+                                    <input type="text" class="form-control" name="ChemigationCounty" readonly
+                                        [value]="chemigationPermit?.ChemigationCounty.ChemigationCountyDisplayName" />
+                                </div>
+                            
+                            </div>
+
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="row mt-4">
-            <div class="col-sm-5">
-                <div class="col-sm">
-                    <i class="fas fa-bolt"></i> Required field
+
+                <div class="row col-12 mt-4">
+                    <div class="col-sm text-right">
+                        <button type="submit" class="btn btn-zybach" [disabled]="!editChemigationPermitForm.form.valid || isLoadingSubmit">
+                            <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
+                            Save
+                        </button>
+                        <a class="btn btn-secondary ml-1" routerLink="/chemigation-permits">Cancel</a>
+                    </div>
                 </div>
-                <div class="col-sm text-right">
-                    <button type="submit" class="btn btn-zybach" [disabled]="!editChemigationPermitForm.form.valid || isLoadingSubmit">
-                        <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
-                        Save
-                    </button>
-                    <a class="btn btn-secondary ml-1" routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}">
-                        Cancel
-                    </a>
-                </div>
+                    
             </div>
         </div>
     </form>
