fixed datepicker weirdness: to glue the button to the input field and render at same height use the pattern in chemigation-permit-add-record.component.html

--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -163,6 +163,17 @@
                                 </div>
                             </div>
 
+                            <div class="row col-12">
+                                <div class="col-6 text-right">
+                                    <p><strong>Email: </strong></p>
+                                </div>
+                                <div class="col-6 text-left">
+                                    <p>{{currentYearAnnualRecord.ApplicantEmail}}
+                                        <em *ngIf="!currentYearAnnualRecord.ApplicantEmail" class="text-muted">N/A</em>
+                                    </p>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
 
