--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-add-record/chemigation-permit-add-record.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-add-record/chemigation-permit-add-record.component.html
@@ -133,25 +133,28 @@
                                 <div class="col-6 control-label text-right mb-2">
                                     <label><strong>Date Received: </strong></label>
                                 </div>
-                                <div class="col-6 text-left mb-2">
-                                            <input class="form-control" name="dp"
-                                            [(ngModel)]="model.DateReceived" ngbDatepicker #d="ngbDatepicker">
-                                            <div class="input-group-append">
-                                                <button class="btn btn-zybach far fa-calendar" (click)="d.toggle()" type="button"></button>
-                                            </div>
+                                <div class="col-6 text-left mb-2 form-group">
+                                    <div class="input-group">
+                                        <input class="form-control" name="dp1"
+                                        [(ngModel)]="model.DateReceived" ngbDatepicker #d1="ngbDatepicker" />
+                                        <div class="input-group-append">
+                                            <button class="btn btn-zybach far fa-calendar input-group-append" (click)="d1.toggle()" type="button"></button>
+                                        </div>
+                                    </div>
                                 </div>
 
                                 <div class="col-6 control-label text-right mb-2">
                                     <label><strong>Date Paid: </strong></label>
                                 </div>
-                                <div class="col-6 text-left mb-2">
-                                            <input class="form-control" name="dp"
-                                            [(ngModel)]="model.DatePaid" ngbDatepicker #d="ngbDatepicker">
-                                            <div class="input-group-append">
-                                                <button class="btn btn-zybach far fa-calendar" (click)="d.toggle()" type="button"></button>
-                                            </div>
+                                <div class="col-6 text-left mb-2 form-group">
+                                    <div class="input-group">
+                                        <input class="form-control" name="dp2"
+                                        [(ngModel)]="model.DatePaid" ngbDatepicker #d2="ngbDatepicker" />
+                                        <div class="input-group-append">
+                                            <button class="btn btn-zybach far fa-calendar" (click)="d2.toggle()" type="button"></button>
+                                        </div>
+                                    </div>
                                 </div>
-      
       
                             </div>
 
