--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-add-record/chemigation-permit-add-record.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-add-record/chemigation-permit-add-record.component.html
@@ -26,7 +26,7 @@
             <p>Add an annual record to the selected Chemigation Permit using the form below</p>
         </div>
     </div>
-    <form (ngSubmit)="onSubmit(editChemigationPermitAnnualRecordForm)" #editChemigationPermitAnnualRecordForm="ngForm">
+    <form (ngSubmit)="onSubmit(addChemigationPermitAnnualRecordForm)" #addChemigationPermitAnnualRecordForm="ngForm">
         <div class="row align-items-center">
             <div class="col-12">
                 <div class="card" *ngIf="model">
@@ -47,7 +47,7 @@
                                 <div class="col-6 text-left mb-2">
                                     {{chemigationPermit.ChemigationPermitNumber}}
                                 </div>
-                                
+
                                 <div class="col-6 control-label text-right mb-2">
                                     <label><strong>Renewal Year: </strong></label>
                                 </div>
@@ -56,7 +56,7 @@
                                 </div>
 
                             </div>
-    
+
                             <div class="row col-6 mt-4">
 
                                 <div class="col-6 control-label text-right mb-2">
@@ -72,163 +72,24 @@
                                 <div class="col-6 text-left mb-2">
                                     {{chemigationPermit.ChemigationCounty.ChemigationCountyDisplayName}}
                                 </div>
-                                
+
                                 <div class="col-6 control-label text-right mb-2">
                                     <label><strong>Total Acres Treated: </strong></label>
                                 </div>
                                 <div class="col-6 text-left mb-2">
                                     {{chemigationPermit.TotalAcresTreated}}
                                 </div>
+
                             </div>
 
                         </div>
 
                         <hr class="w-90" />
 
-                        <div class="row col-12">
-                            <div class="row col-6 mt-4">
+                        <zybach-chemigation-permit-annual-record-upsert #annualRecordForm
+                            (isFormValid)="isAnnualRecordFormValid($event)" [(model)]="model">
+                        </zybach-chemigation-permit-annual-record-upsert>
 
-                                
-                                <div class="col-6 control-label text-right mb-2">
-                                    <label class="required"><strong>Annual Renewal Status: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2">
-                                    <select name="ChemigationPermitAnnualRecordStatusID" class="form-control" 
-                                        [(ngModel)]="model.ChemigationPermitAnnualRecordStatusID" required>
-                                        <option *ngFor="let annualRecordStatus of annualRecordStatuses"
-                                            [value]="annualRecordStatus.ChemigationPermitAnnualRecordStatusID">
-                                            {{annualRecordStatus.ChemigationPermitAnnualRecordStatusDisplayName}}
-                                        </option>
-                                    </select>
-                                </div>
-
-                                <div class="col-6 control-label text-right mb-2">
-                                    <label class="required"><strong>Pivot Name: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2">
-                                    <input type="text" class="form-control" name="PivotName"
-                                        placeholder="Pivot Name" required [(ngModel)]="model.PivotName" />
-                                </div>
-
-                                <div class="col-6 control-label text-right mb-2">
-                                    <label class="required"><strong>Injection Unit Type: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2">
-                                    <select name="ChemigationInjectionUnitTypeID" class="form-control" 
-                                        [(ngModel)]="model.ChemigationInjectionUnitTypeID" required>
-                                        <option selected disabled [value]="">Choose One</option>
-                                        <option *ngFor="let injectionUnitType of injectionUnitTypes"
-                                            [value]="injectionUnitType.ChemigationInjectionUnitTypeID">
-                                            {{injectionUnitType.ChemigationInjectionUnitTypeDisplayName}}
-                                        </option>
-                                    </select>
-                                </div>
-                            
-
-                                
-                                <div class="col-6 control-label text-right mb-2">
-                                    <label><strong>Date Received: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2 form-group">
-                                    <div class="input-group">
-                                        <input class="form-control" name="dp1"
-                                        [(ngModel)]="model.DateReceived" ngbDatepicker #d1="ngbDatepicker" />
-                                        <div class="input-group-append">
-                                            <button class="btn btn-zybach far fa-calendar input-group-append" (click)="d1.toggle()" type="button"></button>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-6 control-label text-right mb-2">
-                                    <label><strong>Date Paid: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2 form-group">
-                                    <div class="input-group">
-                                        <input class="form-control" name="dp2"
-                                        [(ngModel)]="model.DatePaid" ngbDatepicker #d2="ngbDatepicker" />
-                                        <div class="input-group-append">
-                                            <button class="btn btn-zybach far fa-calendar" (click)="d2.toggle()" type="button"></button>
-                                        </div>
-                                    </div>
-                                </div>
-      
-                            </div>
-
-                            <div class="row col-6 mt-4">
-                                <div class="col-6 control-label text-right mb-2">
-                                    <label class="required"><strong>Applicant First Name: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2">
-                                    <input type="text" class="form-control" name="ApplicantFirstName"
-                                        placeholder="First Name" required [(ngModel)]="model.ApplicantFirstName" />
-                                </div>
-
-                                <div class="col-6 control-label text-right mb-2">
-                                    <label class="required"><strong>Applicant Last Name: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2">
-                                    <input type="text" class="form-control" name="ApplicantLastName"
-                                        placeholder="Last Name" required [(ngModel)]="model.ApplicantLastName" />
-                                </div>
-
-                                <div class="col-6 control-label text-right mb-2">
-                                    <label class="required"><strong>Address: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2">
-                                    <input type="text" class="form-control" name="ApplicantMailingAddress"
-                                        placeholder="Street Address" required [(ngModel)]="model.ApplicantMailingAddress" />
-                                </div>
-
-                                <div class="col-6 control-label text-right mb-2">
-                                    <label class="required"><strong>City: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2">
-                                    <input type="text" class="form-control" name="ApplicantCity"
-                                            placeholder="City" required [(ngModel)]="model.ApplicantCity" />
-                                </div>
-
-                                <div class="col-6 control-label text-right mb-2">
-                                    <label class="required"><strong>State: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2">
-                                    <input type="text" class="form-control" name="ApplicantState"
-                                        placeholder="State" required [(ngModel)]="model.ApplicantState" />
-                                </div>
-
-                                <div class="col-6 control-label text-right mb-2">
-                                    <label class="required"><strong>Zip: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2">
-                                    <input type="text" class="form-control" name="ApplicantZipCode"
-                                            placeholder="Zip Code" required [(ngModel)]="model.ApplicantZipCode" />
-                                </div>
-
-                                <div class="col-6 control-label text-right mb-2">
-                                    <label><strong>Phone: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2">
-                                    <input type="text" class="form-control" name="ApplicantPhone"
-                                        placeholder="Phone Number" [(ngModel)]="model.ApplicantPhone" />
-                                </div>
-
-                                <div class="col-6 control-label text-right mb-2">
-                                    <label><strong>Mobile Phone: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2">
-                                    <input type="text" class="form-control" name="ApplicantMobilePhone"
-                                        placeholder="Mobile Number" [(ngModel)]="model.ApplicantMobilePhone" />
-                                </div>
-
-                                <div class="col-6 control-label text-right mb-2">
-                                    <label><strong>Email: </strong></label>
-                                </div>
-                                <div class="col-6 text-left mb-2">
-                                    <input type="text" class="form-control" name="ApplicantEmail"
-                                        placeholder="Email Address" [(ngModel)]="model.ApplicantEmail" />
-                                </div>
-                            </div>
-                            
-                        </div>
                     </div>
                 </div>
 
@@ -237,16 +98,17 @@
                         <i class="fas fa-bolt"></i> Required field
                     </div>
                     <div class="col-sm text-right">
-                        <button type="submit" class="btn btn-zybach" [disabled]="!editChemigationPermitAnnualRecordForm.form.valid || isLoadingSubmit">
+                        <button type="submit" class="btn btn-zybach"
+                            [disabled]="isFormValid(addChemigationPermitAnnualRecordForm)">
                             <span *ngIf="isLoadingSubmit" class="fa fa-spinner loading-spinner"></span>
                             Save
                         </button>
-                        <a class="btn btn-secondary ml-1" routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}">
+                        <a class="btn btn-secondary ml-1"
+                            routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}">
                             Cancel
                         </a>
                     </div>
                 </div>
-            
             </div>
         </div>
     </form>
