--- a/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
@@ -1,4 +1,4 @@
-<form #cparUpsert="ngForm">
+<form #annualRecordForm="ngForm">
     <div class="row col-12">
         <div class="row col-6 mt-4">
             
