--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -20,17 +20,23 @@
         <div class="col-12 col-sm-6">{{chemigationPermit.TownshipRangeSection}}</div>
         <div class="col-12 col-sm-6 label"><strong>County: </strong></div>
         <div class="col-12 col-sm-6">{{chemigationPermit.ChemigationCounty.ChemigationCountyDisplayName}}</div>
-        <!-- <div class="col-12 col-sm-6 label"><strong>Total Acres Treated: </strong></div>
-        <div class="col-12 col-sm-6">{{chemigationPermit.TotalAcresTreated | number: '1.0-1'}}</div> -->
+        <div class="col-12 col-sm-6 label"><strong>Total Acres Treated: </strong></div>
+        <div class="col-12 col-sm-6">{{chemigationPermit.TotalAcresTreated | number: '1.0-1'}}</div>
     </div>
     <div class="row col-12 mt-3">
         <div class="col-6">
             <a class="btn btn-zybach btn-md float-left" routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/edit">
                 <span class="fas fa-edit"></span> Edit Permit </a>
         </div>
-        <div class="col-6">
+        <div class="col-6" *ngIf="permitHasCurrentRecord()">
+            <a class="btn btn-zybach btn-md float-right disabled" routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/add-record">
+                <span class="fas fa-plus"></span> Create Renewal 
+            </a>
+        </div>
+        <div class="col-6" *ngIf="!permitHasCurrentRecord()">
             <a class="btn btn-zybach btn-md float-right" routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/add-record">
-                <span class="fas fa-plus"></span> Create Renewal </a>
+                <span class="fas fa-plus"></span> Create Renewal 
+            </a>
         </div>
     </div>
 </div>
