--- a/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
@@ -43,6 +43,7 @@
             <div class="col-6 text-left mb-2 form-group">
                 <div class="input-group">
                     <input class="form-control" name="dp1"
+                    placeholder="yyyy-mm-dd"
                     [(ngModel)]="model.DateReceived" ngbDatepicker #d1="ngbDatepicker" />
                     <div class="input-group-append">
                         <button class="btn btn-zybach far fa-calendar input-group-append" (click)="d1.toggle()" type="button"></button>
@@ -56,6 +57,7 @@
             <div class="col-6 text-left mb-2 form-group">
                 <div class="input-group">
                     <input class="form-control" name="dp2"
+                    placeholder="yyyy-mm-dd"
                     [(ngModel)]="model.DatePaid" ngbDatepicker #d2="ngbDatepicker" />
                     <div class="input-group-append">
                         <button class="btn btn-zybach far fa-calendar" (click)="d2.toggle()" type="button"></button>
