inverted states map, makes more sense to display a key and save a value than vice versa

--- a/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
@@ -107,8 +107,8 @@
                 <select name="ApplicantState" class="form-control" 
                     [(ngModel)]="model.ApplicantState" required>
                     <option *ngFor="let state of states | keyvalue"
-                        [value]="state.key">
-                        {{state.value}}
+                        [value]="state.value">
+                        {{state.key}}
                     </option>
                 </select>
             </div>
