applied chemicals display on detail page now spans full width

--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -193,9 +193,9 @@
 
                     <hr class="w-90" />
 
-                    <h5>Applied Chemicals</h5>
-                    <div class="row col-12">
-                        <table class="table table-responsive table-striped" *ngIf="currentYearAnnualRecord.ChemicalFormulations">
+                    <div class="row col-12 table-responsive">
+                        <h5>Applied Chemicals</h5>
+                        <table class="table table-striped" *ngIf="currentYearAnnualRecord.ChemicalFormulations">
                             <thead>
                                 <tr>
                                     <th>Formulation</th>
