change placeholder text for phone numbers on CPAR upsert component

--- a/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
@@ -126,7 +126,7 @@
             </div>
             <div class="col-6 text-left mb-2">
                 <input type="text" class="form-control" name="ApplicantPhone"
-                    placeholder="Phone Number" [(ngModel)]="model.ApplicantPhone" />
+                    placeholder="###-###-####" [(ngModel)]="model.ApplicantPhone" />
             </div>
 
             <div class="col-6 control-label text-right mb-2">
@@ -134,7 +134,7 @@
             </div>
             <div class="col-6 text-left mb-2">
                 <input type="text" class="form-control" name="ApplicantMobilePhone"
-                    placeholder="Mobile Number" [(ngModel)]="model.ApplicantMobilePhone" />
+                    placeholder="###-###-####" [(ngModel)]="model.ApplicantMobilePhone" />
             </div>
 
             <div class="col-6 control-label text-right mb-2">
